examples/test/testpolicy11307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11307
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key40: value6
      key10: value11
      key37: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value14
          key18: value19
      podSelector:
        matchLabels:
          key26: value34
          key25: value43
          key40: value30
